2003-11-17 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in: Moved QUICKNET settings in the
	AUDIO_DEVICES settings.
	
	* src/common.h, src/config.cpp, src/lid.cpp: See above.

	* src/config.cpp: enable_microtelco_changed_nt : Do not
	update the widgets when triggered as they are temporarily
	removed.
	
	* src/druid.cpp: Display the right callto at the end of the setup.
	Set the correct email in the gconf settings even though the user
	chose not to register to ILS.
	
2003-11-16 Damien Sandras  <dsandras@seconix.com>

	* configure.in, gnomemeeting.schemas.in.in, src/common.h,
	src/config.cpp, src/connection.cpp, src/druid.cpp, src/endpoint.cpp,
	src/endpoint.h, src/gnomemeeting.cpp, src/lid.cpp, src/pref_window.cpp,
	src/toolbar.cpp, src/videograbber.cpp: New keys structure for the
	devices.
	
2003-11-16 Damien Sandras  <dsandras@seconix.com>

	* lib/dialog.c: Added call to gtk_window_set_transient_for.

	* src/callbacks.cpp, src/callbacks.h, src/config.cpp,
	src/connection.cpp, src/endpoint.cpp, src/endpoint.h,
	src/gnomemeeting.cpp, src/pref_window.cpp, src/pref_window.h,
	src/videograbber.cpp, src/videograbber.h: Improved devices handling.
	
2003-11-13 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Adapted includes order to cope with the non-recursive
	system in openh323 cvs.
	
	* src/common.h, src/config.cpp, src/druid.cpp, src/endpoint.cpp,
	src/gnomemeeting.cpp, src/main_window.cpp, src/pref_window.cpp,
	src/sound_handling.cpp, src/sound_handling.h, src/videograbber.cpp,
	src/videograbber.h: Converted the new and definitive plugins system
	developed by Julien Puydt and Craig Southeren.
	
2003-11-12 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in, src/endpoint.cpp, src/endpoint.h,
	src/gatekeeper.cpp, src/gatekeeper.h, src/pref_window.cpp, 
	configure.in: Reverted previous TTL change.
	
2003-11-12 Damien Sandras  <dsandras@seconix.com>
