@@ -1,3 +1,8 @@
+2003-11-18 Damien Sandras  <dsandras@seconix.com>
+
+	* src/gdkvideoio.h, src/vfakeio.cpp, src/vfakeio.h: Added what's
+	required to work with latest CVS.
+	
 2003-11-17 Damien Sandras  <dsandras@seconix.com>
 
 	* configure.in: Incremented SCHEMA_AGE.
